--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -9,10 +9,27 @@
     android:id="@+id/introRlayout"
     tools:context=".Intro">
 
+    <Button
+        android:text="skip"
+        android:textAllCaps="false"
+        android:textColor="#1DE9B6"
+        android:textSize="15sp"
+        android:gravity="right|center"
+        android:paddingRight="10dp"
+        android:background="@android:color/transparent"
+        android:id="@+id/btnSkip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="5dp"
+        android:layout_below="@id/introViewPager"/>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/introViewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="661dp"
         android:layout_above="@id/btnGetStarted">
 
     </android.support.v4.view.ViewPager>
@@ -48,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/btnBack"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:drawableLeft="@drawable/ic_arrow_back"
                 android:paddingLeft="5dp"
                 android:layout_marginLeft="5dp"
@@ -69,6 +87,7 @@
             <Button
                 android:id="@+id/btnNext"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:background="@drawable/smooth_corners"
                 android:text="next"
                 android:paddingRight="5dp"
