--- a/app/src/main/res/layout/fragment_creative_arts.xml
+++ b/app/src/main/res/layout/fragment_creative_arts.xml
@@ -3,14 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ArticlesFragment">
+    tools:context=".fragments.CreativeArts">
 
-    <GridView
+    <ListView
+        android:footerDividersEnabled="false"
+        android:divider="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/articlesGrid"
+        android:id="@+id/creativeArtsList"
         android:scrollbars="none"
-
-        ></GridView>
+        ></ListView>
 
 </FrameLayout>
