--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,17 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
+    <style name="ArticleReaderActivity" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="colorPrimaryDark">@color/sikika_blue</item>
+    </style>
+
+    <style name="grayColorAccent" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorAccent">#555</item>
+    </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
